--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   min-height: 100vh;
-  background-color: #333;
+  background-color: rgb(43, 43, 43);
   display: flex;
   align-items: center;
   justify-content: center;
