--- a/src/App.scss
+++ b/src/App.scss
@@ -3,7 +3,7 @@
 $base-colour: #333;
 $primary-colour: white;
 $secondary-colour: #11d411;
-$warning-colour: #f3de1d;
+$warning-colour: #d8c628;
 $max-window-width: 500px;
 $toast-slide-animation-time: 3s;
 $toast-duration: 3s;
@@ -17,6 +17,12 @@ $toast-duration: 3s;
 }
 
 .App {
+  @include centered;
+  width: 100vw;
+  height: 100vh;
+}
+
+.gameWindow {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -49,6 +55,22 @@ $toast-duration: 3s;
 
   a {
     color: black;
+  }
+
+  .menuShowTutorial {
+    @include centered;
+    cursor: pointer;
+    position: absolute;
+    top: 0;
+    right: 0;
+    color: $base-colour;
+    border: 2px solid $base-colour;
+    border-radius: 100px;
+    width: 5vw;
+    height: 5vw;
+    margin: 1%;
+    font-size: 1.2rem;
+    font-weight: 600;
   }
 }
 
@@ -180,6 +202,15 @@ $toast-duration: 3s;
 
 /* Word Box Styling */
 
+.wordsContainer {
+  @include centered;
+  flex-grow: 2;
+}
+
+.wordsBox {
+  width: 100%;
+}
+
 .wordContainer {
   padding-top: 10%;
   display: flex;
@@ -197,16 +228,13 @@ $toast-duration: 3s;
   height: 40px;
   margin: 0.5% 1%;
   border-radius: 5px;
+  font-weight: 600;
+  font-size: 1.3rem;
 
   &.active {
     box-shadow: 0px 2px 4px -1px black,
       0px 4px 5px 0px #222, 0px 1px 10px 0px #111;
   }
-}
-
-.letterBoxLetter {
-  font-weight: 600;
-  font-size: 1.3rem;
 }
 
 /* Toast Styling */
@@ -286,6 +314,12 @@ $toast-duration: 3s;
     stroke-width: 3px;
   }
 
+  .failureX {
+    stroke: $base-colour;
+    width: 60%;
+    height: 60%;
+  }
+
   .iconButton {
     @include centered;
     flex-direction: column;
@@ -304,5 +338,40 @@ $toast-duration: 3s;
       font-size: 1.1rem;
       margin: 5px 0px 5px;
     }
+  }
+}
+
+/* Tutorial Styling */
+
+.tutorialContainer {
+  @include centered;
+  flex-direction: column;
+  width: 80%;
+  background-color: $base-colour;
+  color: $primary-colour;
+  padding: 5%;
+
+  h3 {
+    margin-top: 0px;
+  }
+
+  p {
+    width: 100%;
+    margin: 2%;
+  }
+
+  hr {
+    width: 100%;
+  }
+  
+  .closeTutorialButton {
+    margin: 0px 0px 0px 90%;
+    width: 5%;
+    text-align: right;
+    position: relative;
+    display: inline;
+    color: #aaa;
+    font-weight: bold;
+    cursor: pointer;
   }
 }
