--- a/src/App.scss
+++ b/src/App.scss
@@ -29,13 +29,18 @@ $toast-slide-animation-time: 3s;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 87vw;
+  width: 91vw;
   max-width: $max-window-width;
-  height: 92vh;
+  height: 95%;
+  max-height: 94vh;
   border-radius: 25px;
-  padding: 15px;
-
+  padding: 2%;
   background: linear-gradient(150deg, $base-colour, scale-color($base-colour, $lightness: 20%))
+}
+
+.inputConainer {
+  height: 20%;
+  max-height: 20%;
 }
 
 /* Menu Styling */
@@ -48,6 +53,7 @@ $toast-slide-animation-time: 3s;
   top: 0;
   left: 0;
   background-color: rgba(255, 255, 255, 0.7);
+  z-index: 10;
 
   .footnote {
     position: absolute;
@@ -160,9 +166,10 @@ $toast-slide-animation-time: 3s;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 5px;
+  justify-content: space-between;
+  padding: 6px;
   border: 1px solid $primary-colour;
-  border-radius: 10px;
+  border-radius: 20px;
 
   .keyboardRow {
     display: flex;
@@ -170,7 +177,7 @@ $toast-slide-animation-time: 3s;
     width: 100%;
     margin-bottom: 1.5%;
   }
-  
+
   .keyboardKey {
     cursor: pointer;
     @include centered;
@@ -180,7 +187,12 @@ $toast-slide-animation-time: 3s;
     border: 1px solid $primary-colour;
     border-radius: 5px;
     background-color: $primary-colour;
-    margin-left: 5px;
+    margin-right: 5px;
+    overflow: hidden;
+
+    &:last-child {
+      margin: 0px;
+    }
   }
   
   .keyboardKey:active {
@@ -201,7 +213,7 @@ $toast-slide-animation-time: 3s;
     color: $base-colour;
     font-weight: bold;
     padding: 0px 7px;
-    font-size: 1em;
+    font-size: 0.9em;
   }
 }
 
@@ -209,7 +221,7 @@ $toast-slide-animation-time: 3s;
 
 .wordsContainer {
   @include centered;
-  flex-grow: 2;
+  height: 75%;
 }
 
 .wordsBox {
@@ -235,10 +247,18 @@ $toast-slide-animation-time: 3s;
   border-radius: 5px;
   font-weight: 600;
   font-size: 1.3rem;
+  transition: transform 1s;
+  transform-style: preserve-3d;
+  z-index: 0;
 
   &.active {
     box-shadow: 0px 2px 4px -1px black,
       0px 4px 5px 0px #222, 0px 1px 10px 0px #111;
+  }
+
+  &.match {
+    animation: 0.8s flip;
+    animation-direction: forwards;
   }
 }
 
@@ -266,19 +286,29 @@ $toast-slide-animation-time: 3s;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 90%;
   max-width: $max-window-width;
-  height: 20%;
+  height: 100%;
+  width: 100%;
   background-color: $base-colour;
-  border-radius: 10px;
-  padding: 5%;
+  border-radius: 20px;
+
+  p {
+    color: $primary-colour;
+    font-size: 1.1rem;
+    margin: 5px 0px 5px;
+  }
+
+  .result {
+    @include centered;
+    flex-direction: column;
+    text-align: center;
+  }
 
   .resultIconContainer {
     @include centered;
-
     border-radius: 50%;
-    width: 12vh;
-    height: 12vh;
+    width: 11vh;
+    height: 11vh;
     margin: 10% 0px 10%;
 
     &.success {
@@ -320,10 +350,6 @@ $toast-slide-animation-time: 3s;
       margin-top: 2rem;
     }
 
-    p {
-      font-size: 1.1rem;
-      margin: 5px 0px 5px;
-    }
   }
 }
 
@@ -381,5 +407,11 @@ $toast-slide-animation-time: 3s;
 
   100% {
     transform: translateY(-500px);
+  }
+}
+
+@keyframes flip {
+  100% {
+    transform: rotateY(360deg);
   }
 }
