--- a/src/index.css
+++ b/src/index.css
@@ -5,11 +5,11 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  min-height: 100vh;
   background-color: rgb(43, 43, 43);
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  height: 100vh;
+  max-height: 100vh;
+  padding: 0px;
+  margin: 0px;
 }
 
 code {
