--- a/src/App.scss
+++ b/src/App.scss
@@ -70,9 +70,21 @@ $toast-slide-animation-time: 3s;
   }
 
   .menuShowTutorial {
+    @include centered;
+    cursor: pointer;
     position: absolute;
     top: 0;
     right: 0;
+    color: $base-colour;
+    border: 2px solid $base-colour;
+    border-radius: 100px;
+    width: 5vw;
+    max-width: 50px;
+    height: 5vw;
+    max-height: 50px;
+    margin: 1%;
+    font-size: 1.2rem;
+    font-weight: 700;
   }
 }
 
